[tool.poetry]
name = "webtransport"
version = "0.1.0"
description = ""
authors = ["Tadao Iseki <me@saitolume.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10.0"
aioquic = {git = "https://github.com/saitolume/aioquic.git", rev = "update-h3-datagram-value"}
argparse = "^1.4.0"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
